# DeltaPatcherAndroid

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  settings.gradle.kts
.github/ISSUE_TEMPLATE/: bug_report.md  delta-patcher-android-icon-.md  feature_request.md
.github/workflows/: build.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/io/github/innixunix/deltapatcher/: DecodeTab.kt  EncodeTab.kt  FileUtil.kt  MainActivity.kt  NativeLibrary.kt  NotificationService.kt
app/src/main/java/io/github/innixunix/deltapatcher/ui/dialogs/: PopUpMessageDialog.kt
app/src/main/java/io/github/innixunix/deltapatcher/ui/settings/: SettingsMenu.kt  settingEntries.kt
app/src/main/java/io/github/innixunix/deltapatcher/utils/: FileUtil.kt  NotificationService.kt  PatchErrors.kt
app/src/main/java/io/github/kleidis/deltapatcher/: MainActivity.kt  NativeLibrary.kt
app/src/main/java/io/github/kleidis/deltapatcher/utils/: FileUtil.kt  NotificationService.kt  PatchErrors.kt
app/src/main/java/io/github/nyxynx/deltapatcher/: MainActivity.kt  NativeLibrary.kt
app/src/main/java/io/github/nyxynx/deltapatcher/utils/: FileUtil.kt  NotificationService.kt  PatchErrors.kt
app/src/main/res/drawable/: ic_notifications.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
cpp/: XDeltaPatch.cpp  XDeltaPatch.h  native.cpp  native.h
cpp/utils/: base64.cpp
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
libs/: CMakeLists.txt
(+23 files in other folders)
